# inovintell

./: .gitignore  COPYRIGHT.md  README.md  pyproject.toml
inovintel/data/: step_1_merge_datasets.py  step_2_preprocess.py  step_3_encoding_and_split.py
inovintel/training/: baseline.py  shallow_ensemble.py
scripts/: error_analysis_performance.ipynb  one_hot_encoding.ipynb
