[tool.poetry]
name = "inovintel"
version = "0.1.0"
description = ""
authors = ["Przemysław Lipka <github@clazz.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.9.2"
fire = "^0.5.0"
seaborn = "^0.13.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
